backend auth + saved page updates/fix

--- a/static/login.html
+++ b/static/login.html
@@ -14,7 +14,7 @@
                 <nav class="main-nav">
                     <a href="/" class="nav-link">Home</a>
                     <a href="/explore" class="nav-link">Plan Trip</a>
-                    <a href="#" class="nav-link">Saved Trips</a>
+                    <a href="/saved" class="nav-link">Saved Trips</a>
                 </nav>
                 <div class="header-actions">
                     <button id="guided-setup-btn" class="btn-guided">Guided Setup</button>
