--- a/static/explore.html
+++ b/static/explore.html
@@ -15,10 +15,10 @@
             <nav class="main-nav">
                 <a href="/" class="nav-link active">Home</a>
                 <a href="/explore" class="nav-link">Plan Trip</a>
-                <a href="#" class="nav-link">Saved Trips</a>
+                <a href="/saved" class="nav-link">Saved Trips</a>
             </nav>
             <div class="header-actions">
-                <button id="guided-setup-btn" class="btn-guided">Guided Setup</button>
+                <button id="guided-setup-btn" class="btn-guided" onclick="openModal()">Guided Setup</button>
                 <button class="btn-secondary"
                         onclick="window.location.href='/login';">LOG IN</button>
                 <button class="btn-primary" 
@@ -189,7 +189,7 @@
                 </div>
                 
                 <div class="itinerary-actions">
-                    <button class="save-btn" disabled>Save</button>
+                    <button id="save-itinerary-btn" class="save-btn" disabled>Save</button>
                     <button class="share-btn" disabled>Share</button>
                 </div>
             </div>
