editing functionality fixed, auth changed, loggin, slighly imrpoved, and a basic pdf/emailing fucntions set

--- a/static/explore.html
+++ b/static/explore.html
@@ -190,7 +190,7 @@
                 
                 <div class="itinerary-actions">
                     <button id="save-itinerary-btn" class="save-btn" disabled>Save</button>
-                    <button class="share-btn" disabled>Share</button>
+                    <button id="share-itinerary-btn" class="share-btn" disabled>Share</button>
                 </div>
             </div>
         </div>
