--- a/static/login.html
+++ b/static/login.html
@@ -25,19 +25,29 @@
                 </div>
             </div>
         </header>
-
         <main>
-            <form id="login-form">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-                
-                <button type="submit" class="btn-primary">Log In</button>
-            </form>
-            <p id="message" style="color:red;"></p>
+            <div class="card" style="width: 60%; margin: 2rem auto;">
+                <h2 style="text-align:center; margin-bottom: 1rem;">Log In</h2>
+
+                <form id="login-form" action="/login" method="POST">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="your@email.com" required>
+
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" placeholder="••••••••" required>
+
+                    <button type="submit" class="btn-primary">Log In</button>
+                </form>
+
+                <p id="message" style="color:red; margin-top:0.5rem; text-align:center;"></p>
+
+                <p style="text-align:center; margin-top:1rem; font-size:0.95rem;">
+                    Don't have an account? 
+                    <a href="/register" style="color:#2563eb; font-weight:600;">Sign Up</a>
+                </p>
+            </div>
         </main>
+
         <script src="/static/login.js"></script>
     </body>
 </html>
