--- a/static/register.html
+++ b/static/register.html
@@ -27,25 +27,40 @@
         </header>
 
         <main>
-            <h1>Create an Account</h1>
+        <div class="card" style="width: 60%; margin: 2rem auto;">
+            <h2 style="text-align:center; margin-bottom: 1rem;">Create an Account</h2>
+
             <form id="register-form">
-                <label for="first_name">First Name</label><br>
-                <input type="text" id="first_name" name="first_name" required><br><br>
 
-                <label for="last_name">Last Name</label><br>
-                <input type="text" id="last_name" name="last_name" required><br><br>
+                <div class="name-row">
+                    <div>
+                        <label for="first_name">First Name</label>
+                        <input type="text" id="first_name" name="first_name" required>
+                    </div>
 
-                <label for="email">Email</label><br>
-                <input type="email" id="email" name="email" required><br><br>
+                    <div>
+                        <label for="last_name">Last Name</label>
+                        <input type="text" id="last_name" name="last_name" required>
+                    </div>
+                </div>
 
-                <label for="password">Password</label><br>
-                <input type="password" id="password" name="password" required><br><br>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
 
                 <button type="submit" class="btn-primary">Register</button>
             </form>
 
-            <p id="message" style="color:red;"></p>
-        </main>
+            <p id="message" style="color:red; margin-top:0.5rem; text-align:center;"></p>
+
+            <p style="text-align:center; margin-top:1rem; font-size:0.95rem;">
+                Already have an account?
+                <a href="/login" style="color:#2563eb; font-weight:600;">Log In</a>
+            </p>
+        </div>
+    </main>
         <script src="/static/register.js"></script>
     </body>
 </html>
